Fixed bug in pointer conversion for generic type

--- a/ByteStream/ByteStreamTest/ByteStreamTest.csproj
+++ b/ByteStream/ByteStreamTest/ByteStreamTest.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\ByteStream\ByteStream.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Unmanaged\Pointer\" />
+  </ItemGroup>
+
 </Project>
