Reviewed entire project: - Performance improvements - Improved exception handling - Removed unused functions - Made several helper classes internal

--- a/ByteStream/ByteStreamBenchmark/ByteStreamBenchmark.csproj
+++ b/ByteStream/ByteStreamBenchmark/ByteStreamBenchmark.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>false</Optimize>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
