--- a/ByteStream/ByteStreamBenchmark/ByteStreamBenchmark.csproj
+++ b/ByteStream/ByteStreamBenchmark/ByteStreamBenchmark.csproj
@@ -17,6 +17,10 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
+    <PackageReference Include="NuGet.CommandLine" Version="5.8.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
